added more stuffs

--- a/ansible-scripts/cvp/create_containers.yml
+++ b/ansible-scripts/cvp/create_containers.yml
@@ -14,7 +14,7 @@
     path: "{{lookup('env','PWD')}}"
 
   vars_files: 
-    - ./vars/CVP_model.yml
+    - ../vars/CVP_model.yml
 
   tasks:
     - name: 'Create DC1 container'
